--- a/deployment/ansible-vitam-extra/roles/loadTNR/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/loadTNR/tasks/main.yml
@@ -42,22 +42,28 @@
   run_once: true
   when: login.set_cookie != ''
 
+
+- name: Check if TNR tags file exists
+  stat:
+    path: "{{ inventory_dir }}/TNR_STRING.txt"
+  register: stat_result
+
 - set_fact:
     TNR_TAGS: "{{lookup('file', '{{ inventory_dir }}/TNR_STRING.txt') }}"
+  when: stat_result.stat.exists 
 
 - name: launch TNR
-#  shell: java -Dlogback.configurationFile="{{ TNR_conf }}/logback.xml" -DtnrBaseDirectory={{ TNR_dir }} -jar {{ TNR_lib }}/functional-test-*-jar-with-dependencies.jar -g fr.gouv.vitam.functionaltest.cucumber -p junit:{{ TNR_output }} {{ TNR_dir }}
   shell: java -Dlogback.configurationFile="{{ TNR_conf }}/logback.xml" -DtnrBaseDirectory={{ TNR_dir }} -jar {{ TNR_lib }}/functional-test-*.jar -g fr.gouv.vitam.functionaltest.cucumber -p junit:{{ TNR_output }} -p fr.gouv.vitam.functionaltest.cucumber.report.VitamReporter:{{ report_dir }}/report_{{ ansible_date_time.year }}{{ ansible_date_time.month }}{{ ansible_date_time.day}}_{{ ansible_date_time.hour}}{{ ansible_date_time.minute}}{{ ansible_date_time.second}}.json {{ TNR_dir }}
   become_user: "{{ vitam_defaults.users.vitam }}"
   ignore_errors: true
   args:
     chdir: "{{ TNR_conf }}"
   run_once: true
-  when: TNR_TAGS == 'null'
+  when: not stat_result.stat.exists
 
 - name: launch TNR by tag
   include_tasks: "tnr_by_tag.yml"
-  when: TNR_TAGS != 'null'
+  when: stat_result.stat.exists
 
 - name: get back TNR output file {{ TNR_output }}
   fetch:
