changing logbook external getOperationById
changing logbook external getOperationById to call internal
selectOperation (by request so it'll be tenant filtered)

fixing tests

fix IT test dataload for optionnal contract

fixing IT test /label ~'DEV REVIEW'

moving test into ingest external it

fix selectOperation api to have the same result as before
so we sliced events

--- a/sources/integration-test/pom.xml
+++ b/sources/integration-test/pom.xml
@@ -247,5 +247,23 @@
 			<artifactId>json-unit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>fr.gouv.vitam</groupId>
+			<artifactId>access-external-rest</artifactId>
+			<version>2.1.25-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>fr.gouv.vitam</groupId>
+			<artifactId>ingest-external-rest</artifactId>
+			<version>2.1.25-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>fr.gouv.vitam</groupId>
+			<artifactId>ingest-external-client</artifactId>
+			<version>2.1.25-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
