Item 6716 add la documentation DAT, DIN and DEX for prometheus stack and grafana

--- a/deployment/ansible-vitam-extra/grafana.yml
+++ b/deployment/ansible-vitam-extra/grafana.yml
@@ -3,5 +3,5 @@
 - hosts: grafana
   roles:
     - role: grafana
-      tags: [tag_grafana]
+      tags: [tag_grafana, update_prometheus_configuration]
       when: grafana.enabled == true
