--- a/deployment/ansible-vitam-extra/roles/prometheus-server/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/prometheus-server/tasks/main.yml
@@ -17,16 +17,13 @@
   register: rules_files
   tags:
     - generate_prometheus_conf
-  when: prometheus.prometheus_config_file_target_directory is not undefined
+  when: prometheus.prometheus_config_file_target_directory is  search("/")
 
 - name: Generate local prometheus config file from inventory
   template:
     src: "prometheus.yml.j2"
     dest: "{{ prometheus.prometheus_config_file_target_directory }}/prometheus.yml"
-    owner: "{{ vitam_defaults.users.vitam }}"
-    group: "{{ vitam_defaults.users.group }}"
-    mode: "{{ vitam_defaults.folder.conf_permission }}"
   delegate_to: localhost
   tags:
     - generate_prometheus_conf
-  when: prometheus.prometheus_config_file_target_directory is not undefined
+  when: prometheus.prometheus_config_file_target_directory is  search("/")
