--- a/sources/logbook/logbook-rest/src/test/resources/logbook-test.conf
+++ b/sources/logbook/logbook-rest/src/test/resources/logbook-test.conf
@@ -36,6 +36,9 @@ operationTraceabilityMaxRenewalDelayUnit: MINUTES
 # Unit & object group LFC operation traceability params
 # Skip last 5 minutes (only secure "stable" data)
 lifecycleTraceabilityTemporizationDelay: 300
+# Force new traceability after +/- 12 hours (11 hours and 30 minutes)
+lifecycleTraceabilityMaxRenewalDelay: 690
+lifecycleTraceabilityMaxRenewalDelayUnit: MINUTES
 # Limit traceability to 100000 entries
 lifecycleTraceabilityMaxEntries: 100000
 
