--- a/sources/integration-test/src/test/resources/common/logbook.conf
+++ b/sources/integration-test/src/test/resources/common/logbook.conf
@@ -57,7 +57,10 @@ operationTraceabilityMaxRenewalDelay: 690
 operationTraceabilityMaxRenewalDelayUnit: MINUTES
 
 # Unit & object group LFC operation traceability params
-# Skip last X minutes (only secure "stable" data)
-lifecycleTraceabilityTemporizationDelay: 0
-# Limit traceability to 100000 entries
-lifecycleTraceabilityMaxEntries: 100000
+# Skip last 5 minutes (only secure "stable" data)
+lifecycleTraceabilityTemporizationDelay: 300
+# Force new traceability after +/- 12 hours (11 hours and 30 minutes)
+lifecycleTraceabilityMaxRenewalDelay: 690
+lifecycleTraceabilityMaxRenewalDelayUnit: MINUTES
+# Limit traceability to 20 entries
+lifecycleTraceabilityMaxEntries: 20
