--- a/sources/logbook/logbook-administration-lfc/pom.xml
+++ b/sources/logbook/logbook-administration-lfc/pom.xml
@@ -17,6 +17,11 @@
 		</dependency>
 		<dependency>
 			<groupId>fr.gouv.vitam</groupId>
+			<artifactId>logbook-lifecycles</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.gouv.vitam</groupId>
 			<artifactId>processing-management-client</artifactId>
 			<version>${project.version}</version>
 		</dependency>
