--- a/sources/integration-test/src/test/resources/common/logbook.conf
+++ b/sources/integration-test/src/test/resources/common/logbook.conf
@@ -49,7 +49,15 @@ alertEvents:
 - evType: 'CHECK_RULES'
   outcome: 'KO'
 
-# Traceability params
-operationTraceabilityTemporizationDelay: 0
+# Logbook operation traceability params
+# Skip last 5 minutes (only secure "stable" data)
+operationTraceabilityTemporizationDelay: 300
+# Force new traceability after +/- 12 hours (11 hours and 30 minutes)
+operationTraceabilityMaxRenewalDelay: 690
+operationTraceabilityMaxRenewalDelayUnit: MINUTES
+
+# Unit & object group LFC operation traceability params
+# Skip last X minutes (only secure "stable" data)
 lifecycleTraceabilityTemporizationDelay: 0
+# Limit traceability to 100000 entries
 lifecycleTraceabilityMaxEntries: 100000
