--- a/sources/logbook/logbook-rest/src/test/resources/logbook-test.conf
+++ b/sources/logbook/logbook-rest/src/test/resources/logbook-test.conf
@@ -25,8 +25,18 @@ alertEvents:
   outcome: 'KO'
 - evType: 'CHECK_RULES'
   outcome: 'KO'
+
+# Logbook operation traceability params
+# Skip last 5 minutes (only secure "stable" data)
 operationTraceabilityTemporizationDelay: 300
+# Force new traceability after +/- 12 hours (11 hours and 30 minutes)
+operationTraceabilityMaxRenewalDelay: 690
+operationTraceabilityMaxRenewalDelayUnit: MINUTES
+
+# Unit & object group LFC operation traceability params
+# Skip last 5 minutes (only secure "stable" data)
 lifecycleTraceabilityTemporizationDelay: 300
+# Limit traceability to 100000 entries
 lifecycleTraceabilityMaxEntries: 100000
 
 # ElasticSearch tenant indexation
