--- a/vitam-conf-dev/conf/logbook/logbook.conf
+++ b/vitam-conf-dev/conf/logbook/logbook.conf
@@ -76,7 +76,15 @@ alertEvents:
 - outDetail: 'CHECK_CLASSIFICATION_LEVEL.KO'
 - outDetail: 'STP_PERSONAL_CERTIFICATE_CHECK.KO'
 
-# Traceability params
+# Logbook operation traceability params
+# Skip last 5 minutes (only secure "stable" data)
 operationTraceabilityTemporizationDelay: 300
+# Force new traceability after +/- 12 hours (11 hours and 30 minutes)
+operationTraceabilityMaxRenewalDelay: 690
+operationTraceabilityMaxRenewalDelayUnit: MINUTES
+
+# Unit & object group LFC operation traceability params
+# Skip last 5 minutes (only secure "stable" data)
 lifecycleTraceabilityTemporizationDelay: 300
+# Limit traceability to 100000 entries
 lifecycleTraceabilityMaxEntries: 100000
