check permissions in security profile import and update

--- a/sources/functional-administration/functional-administration-security-profile/pom.xml
+++ b/sources/functional-administration/functional-administration-security-profile/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>assertj-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>fr.gouv.vitam</groupId>
+            <artifactId>common-security</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
