--- a/sources/integration-test/src/test/resources/common/storage-default-offer.conf
+++ b/sources/integration-test/src/test/resources/common/storage-default-offer.conf
@@ -9,3 +9,6 @@ offerLogCompaction:
   expirationValue: 1
   expirationUnit: MILLIS
   compactionSize: 1000
+
+maxBatchThreadPoolSize: 32
+batchMetadataComputationTimeout: 600
