--- a/sources/storage/cas-manager/vitam-offer/src/test/resources/default-offer.conf
+++ b/sources/storage/cas-manager/vitam-offer/src/test/resources/default-offer.conf
@@ -1,3 +1,6 @@
 contextPath: /
 storagePath: .
 jettyConfig: jetty-config-test.xml
+
+maxBatchThreadPoolSize: 32
+batchMetadataComputationTimeout: 600
