--- a/deployment/environments/group_vars/all/offers_opts.yml
+++ b/deployment/environments/group_vars/all/offers_opts.yml
@@ -53,6 +53,10 @@ vitam_offers:
       expiration_unit: "DAYS"
       ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
       compaction_size: 10000
+    # Batch processing thread pool size
+    maxBatchThreadPoolSize: 32
+    # Batch metadata computation timeout in seconds
+    batchMetadataComputationTimeout: 600
   offer-tape-1:
     provider: tape-library
     # Offer log compaction
@@ -63,6 +67,10 @@ vitam_offers:
       expiration_unit: "DAYS"
       ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
       compaction_size: 10000
+    # Batch processing thread pool size
+    maxBatchThreadPoolSize: 32
+    # Batch metadata computation timeout in seconds
+    batchMetadataComputationTimeout: 600
   offer-swift-1:
     # provider : openstack-swift for v1 or openstack-swift-v3 for v3
     provider: openstack-swift-v3
@@ -101,6 +109,10 @@ vitam_offers:
       expiration_unit: "DAYS"
       ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
       compaction_size: 10000
+    # Batch processing thread pool size
+    maxBatchThreadPoolSize: 32
+    # Batch metadata computation timeout in seconds
+    batchMetadataComputationTimeout: 600
 
   # example_offer-s3-1:
   #   # provider : can only be amazon-s3-v1 for Amazon SDK S3 V1
@@ -133,6 +145,10 @@ vitam_offers:
   #     expiration_unit: "DAYS"
   #     ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
   #     compaction_size: 10000
+  #   # Batch processing thread pool size
+  #   maxBatchThreadPoolSize: 32
+  #   # Batch metadata computation timeout in seconds
+  #   batchMetadataComputationTimeout: 600
 
   # example_swift_v1:
   #    provider: openstack-swift
