--- a/sources/storage-integration-multi-offers/src/test/resources/storage-test/storage-default-offer2-ssl.conf
+++ b/sources/storage-integration-multi-offers/src/test/resources/storage-test/storage-default-offer2-ssl.conf
@@ -10,3 +10,6 @@ offerLogCompaction:
   expirationValue: 21
   expirationUnit: DAYS
   compactionSize: 10000
+
+maxBatchThreadPoolSize: 32
+batchMetadataComputationTimeout: 600
