--- a/sources/storage-integration-nossl-test/src/test/resources/storage-test/storage-default-offer-nossl.conf
+++ b/sources/storage-integration-nossl-test/src/test/resources/storage-test/storage-default-offer-nossl.conf
@@ -8,3 +8,6 @@ offerLogCompaction:
   expirationValue: 21
   expirationUnit: DAYS
   compactionSize: 10000
+
+maxBatchThreadPoolSize: 32
+batchMetadataComputationTimeout: 600
