--- a/sources/storage/cas-manager/vitam-offer/src/test/resources/storage-default-offer-ssl.conf
+++ b/sources/storage/cas-manager/vitam-offer/src/test/resources/storage-default-offer-ssl.conf
@@ -8,3 +8,6 @@ offerLogCompaction:
   expirationValue: 21
   expirationUnit: DAYS
   compactionSize: 10000
+
+maxBatchThreadPoolSize: 32
+batchMetadataComputationTimeout: 600
