--- a/vitam-conf-dev/conf/offer/offer.conf
+++ b/vitam-conf-dev/conf/offer/offer.conf
@@ -15,3 +15,6 @@ offerLogCompaction:
   expirationValue: 21
   expirationUnit: DAYS
   compactionSize: 10000
+
+maxBatchThreadPoolSize: 32
+batchMetadataComputationTimeout: 600
