Add package_name in ansible log

--- a/deployment/ansible-vitam/roles/vitam/handlers/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: restart the service
+- name: restart the service {{ package_name }}
   service:
     name: "{{ package_name }}"
     state: restarted
