story #6235 audit sur les collections d'administration fonctionnelle et techniques

--- a/sources/functional-administration/functional-administration-rest/pom.xml
+++ b/sources/functional-administration/functional-administration-rest/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>functional-administration-griffins</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>fr.gouv.vitam</groupId>
+            <artifactId>functional-administration-audit</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>fr.gouv.vitam</groupId>
