--- a/sources/functional-administration/pom.xml
+++ b/sources/functional-administration/pom.xml
@@ -27,6 +27,7 @@
         <module>functional-administration-archive-unit-profiles</module>
         <module>functional-administration-ontologies</module>
         <module>functional-administration-griffins</module>
+        <module>functional-administration-audit</module>
     </modules>
 
     <build>
