--- a/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
+++ b/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
@@ -80,6 +80,7 @@ permissionsWithoutPersonalCertificate:
   - 'switchindex:create'
   - 'reindex:create'
   - 'evidenceaudit:check'
+  - 'referentialaudit:check'
   - 'archiveunitprofiles:create:binary'
   - 'archiveunitprofiles:create:json'
   - 'archiveunitprofiles:read'
