Revert "Merge branch 'add_package_name_in_handler' into 'develop'"
This reverts merge request !7840

--- a/deployment/ansible-vitam/roles/vitam/handlers/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: restart the service {{ package_name }}
+- name: restart the service
   service:
     name: "{{ package_name }}"
     state: restarted
