--- a/deployment/ansible-vitam/roles/generate_hostvars_for_1_network_interface/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/generate_hostvars_for_1_network_interface/tasks/main.yml
@@ -10,13 +10,15 @@
 - name: Add ip_service var to host_vars
   local_action:
     module: lineinfile
-    create: yes 
+    create: yes
     path: "{{ inventory_dir }}/host_vars/{{ inventory_hostname }}"
+    regexp: "ip_service"
     line: "ip_service: {{ ansible_default_ipv4.address }}"
 
 - name: Add ip_admin var to host_vars
   local_action:
     module: lineinfile
-    create: yes 
+    create: yes
     path: "{{ inventory_dir }}/host_vars/{{ inventory_hostname }}"
+    regexp: "ip_admin"
     line: "ip_admin: {{ ansible_default_ipv4.address }}"
