--- a/vitam-conf-dev/conf/logbook/logbook.conf
+++ b/vitam-conf-dev/conf/logbook/logbook.conf
@@ -82,6 +82,8 @@ operationTraceabilityTemporizationDelay: 300
 # Force new traceability after +/- 12 hours (11 hours and 30 minutes)
 operationTraceabilityMaxRenewalDelay: 690
 operationTraceabilityMaxRenewalDelayUnit: MINUTES
+# Number of logbook operations that can be run in parallel.
+operationTraceabilityThreadPoolSize: 16
 
 # Unit & object group LFC operation traceability params
 # Skip last 5 minutes (only secure "stable" data)
