story #6895 fix bug consul cannot fetch logbook when update vitam certificats

--- a/deployment/ansible-vitam/roles/vitam/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/tasks/main.yml
@@ -228,6 +228,7 @@
     - update_vitam_certificates
   notify:
     - restart service
+    - reload consul configuration
 
 - name: "Copy truststore"
   copy:
@@ -241,6 +242,7 @@
     - update_vitam_certificates
   notify:
     - restart service
+    - reload consul configuration
 
 - name: "Copy server grantedstore"
   copy:
@@ -254,6 +256,7 @@
     - update_vitam_certificates
   notify:
     - restart service
+    - reload consul configuration
 
 - name: "Copy {{ vitam_struct.vitam_component }} p12 keystore (clients)"
   copy:
@@ -267,6 +270,7 @@
     - update_vitam_certificates
   notify:
     - restart service
+    - reload consul configuration
 
 - name: "Copy timestamp keystore"
   copy:
@@ -280,6 +284,7 @@
     - update_vitam_certificates
   notify:
     - restart service
+    - reload consul configuration
 
 - include_tasks: remove_metrics.yml
   when: vitam_struct.metrics_enabled |lower != "true"
