Item 7129 : Update test set
- Add test query http files
- Fix test dev conf for local TNRs to match integration plateform
configuration

--- a/vitam-conf-dev/conf/functional-administration/functional-administration.conf
+++ b/vitam-conf-dev/conf/functional-administration/functional-administration.conf
@@ -43,6 +43,7 @@ listEnableExternalIdentifiers:
     - INGEST_CONTRACT
     - ACCESS_CONTRACT
     - MANAGEMENT_CONTRACT
+    - ARCHIVE_UNIT_PROFILE
   1:
     - INGEST_CONTRACT
     - ACCESS_CONTRACT
