--- a/sources/integration-test/src/test/resources/common/metadata.conf
+++ b/sources/integration-test/src/test/resources/common/metadata.conf
@@ -12,3 +12,12 @@ elasticsearchNodes:
 
 workspaceUrl: http://localhost:8094
 urlProcessing: http://localhost:8097
+
+isDataConsistencyAuditRunnable: true
+dataConsistencyAuditOplogMaxSize: 1000
+mongodShardsConf:
+ mongoDbShards:
+   - shardName: shard0
+     mongoDbNodes:
+       - dbHost: 127.0.0.1
+         dbPort: 27017
