--- a/vitam-conf-dev/conf/metadata/metadata.conf
+++ b/vitam-conf-dev/conf/metadata/metadata.conf
@@ -69,3 +69,15 @@ elasticsearchExternalMetadataMappings:
 adminBasicAuth:
 - userName: adminUser
   password: adminPassword
+
+isDataConsistencyAuditRunnable: true
+dataConsistencyAuditOplogMaxSize: 100
+mongodShardsConf:
+ dbUserName: vitamdb-localadmin
+ dbPassword: qwerty
+ dbSslAuthentication: false
+ mongoDbShards:
+   - shardName: shard0
+     mongoDbNodes:
+       - dbHost: 172.17.0.2
+         dbPort: 27019
