--- a/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
+++ b/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
@@ -121,3 +121,4 @@ permissionsWithoutPersonalCertificate:
   - 'transfers:reply'
   - 'transfers:create'
   - 'transfers:id:sip:read'
+  - 'audit:data:consistency'
