--- a/sources/metadata/metadata-rest/pom.xml
+++ b/sources/metadata/metadata-rest/pom.xml
@@ -21,6 +21,11 @@
 		</dependency>
 		<dependency>
 			<groupId>fr.gouv.vitam</groupId>
+			<artifactId>metadata-audit</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.gouv.vitam</groupId>
 			<artifactId>common-security</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -81,7 +86,7 @@
 			<artifactId>assertj-core</artifactId>
 			<scope>test</scope>
 		</dependency>
-    </dependencies>
+	</dependencies>
 
 	<build>
 
