Item 7130 : Add elimination support for hold rules

--- a/deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
+++ b/deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
@@ -1604,6 +1604,9 @@
                 },
                 "OriginatingAgenciesInConflict": {
                   "type": "keyword"
+                },
+                "HoldRuleIds" : {
+                  "type": "keyword"
                 }
               }
             }
